<resources>
    <string name="app_name">CoverIT</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="instrument_label">Instrument</string>
    <string name="bio_label">Bio</string>
    <string name="skill_label">Skill</string>
    <string name="skill_beginner">Beginner</string>
    <string name="skill_advanced">Advanced</string>
    <string name="role_label">Role</string>
    <string name="profile_img_description">Profile Image</string>

    <string name="log_in">Log In</string>
    <string name="create_button">Create</string>
    <string name="update_button">Update</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>

    <string name="error_session_expired">Your session has expired</string>
    <string name="error_unknown">Unknown error occurred</string>

    <string name="login_logo_img_description">logo</string>

    <string name="register_title">Sign Up</string>
    <string name="register_skill_label">Select your skill</string>
    <string name="register_button">Create Account</string>

    <string name="profile_label">Profile</string>

    <string name="profile_join_since">Join since</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_edit_fail">Profile update failed</string>

    <string name="tutorial_description_label">Description: </string>
    <string name="tutorial_strumming_label">Recommended strumming: </string>
    <string name="tutorial_author_label">CreatedBy: </string>
    <string name="tutorial_created_at_label">at: </string>
    <string name="tutorial_label">Tutorial: </string>
    <string name="tutorial_comments_label">Comments</string>
    <string name="tutorial_comments_add_hint">Write a comment...</string>
    <string name="tutorial_comments_add_button_text">Add</string>
    <string name="tutorial_comments_empty">No comment yet.</string>
    <string name="tutorial_comments_reply_icon_description">Answer</string>
    <string name="tutorial_comments_undo_reply_icon_description">Cancel answering</string>
    <string name="tutorial_comments_replying_to_comment">Answer to #%s...</string>

    <string name="toolbar_item_name_cover">Cover</string>
    <string name="toolbar_item_name_create_cover">Add Cover</string>
    <string name="toolbar_item_name_profile">Profile</string>
    <string name="toolbar_item_name_instrument">Instrument</string>

    <string name="search_title">Tutorials</string>
    <string name="search_results">Search result</string>
    <string name="search_no_results_found">No results found. Try another search.</string>
    <string name="search_your_library">Your library</string>
    <string name="search_popular_tutorials">Popular tutorials</string>

    <string name="create_artist_title">Create New Artist</string>
    <string name="artist_name_hint">Enter artist name</string>
    <string name="artist_name_required">Artist name is required</string>
    <string name="artist_bio_hint">Enter artist biography (optional)</string>
    <string name="artist_created_successfully">Artist created successfully</string>

    <string name="create_song_title">Create New Song</string>
    <string name="song_title_label">Song Title</string>
    <string name="song_title_hint">Enter song title</string>
    <string name="song_title_required">Song title is required</string>
    <string name="song_genre_label">Genre</string>
    <string name="song_genre_hint">Enter song genre</string>
    <string name="song_genre_required">Genre is required</string>
    <string name="release_date_label">Release Date</string>
    <string name="release_date_hint">YYYY-MM-DD</string>
    <string name="selected_artists_label">Selected Artists</string>
    <string name="add_artists_label">Add Artists</string>
    <string name="artist_search_hint">Search artists by name</string>
    <string name="search_button">Search</string>
    <string name="clear_search_button">Clear Search</string>
    <string name="no_artists_found">No artists found. If you want to add one click here.</string>
    <string name="artist_search_error">Error searching artists</string>
    <string name="song_created_successfully">Song created successfully</string>
    <string name="at_least_one_artist_required">Please add at least one artist</string>
    <string name="song_remove_artist_icon_description">Remove selected artist</string>

    <string name="create_tutorial_title">Create New Tutorial</string>
    <string name="update_tutorial_title">Update Tutorial</string>
    <string name="song_search_label">Choose the song you want to make a tutorial for</string>
    <string name="song_search_hint">Enter song title</string>
    <string name="no_song_found">No song found. If you want to add one click here.</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="difficulty_hint" translatable="false">SIMPLIFIED/ORIGINAL</string>
    <string name="description_label">Description (optional)</string>
    <string name="description_hint">Enter tutorial description</string>
    <string name="backtrack_label">Backtrack (optional)</string>
    <string name="backtrack_hint">Add backtrack</string>
    <string name="strumming_label">Recommended strumming (optional)</string>
    <string name="strumming_hint">Enter recommended strumming pattern</string>
    <string name="chord_label">Select all chords that are used in song.</string>
    <string name="chord_search_hint">Enter chord</string>
    <string name="selected_chord_label">Selected Chords</string>
    <string name="no_chords_found">No chords found.</string>
    <string name="please_enter_song_name">Enter soon name please</string>
    <string name="please_select_song">Select song please</string>
    <string name="song_search_error">Error during song find</string>
    <string name="difficulty_required">Difficulty is required param</string>
    <string name="tutorial_created_successfully">Tutorial created</string>
    <string name="tutorial_creation_error">Tutorial creation error</string>
    <string name="tutorial_covered_song">Covered song</string>
    <string name="beats_label">Write a tutorial</string>
    <string name="add_chord">Add chord</string>
    <string name="remove_beat">Remove beat</string>
    <string name="add_beat">Add beat</string>
    <string name="beat_text_hint">Text (optional)</string>
    <string name="add_beat_group">Add Line</string>

    <string name="fingering_img_description">Fingering image</string>
    <string name="fingering_img_close">Close fingering image</string>
    <string name="fingering_img_next">next fingering</string>
    <string name="fingering_img_previous">previous fingering</string>
    <string name="chordpedia_label">Chordpedia</string>
    <string name="add_to_personal_library">Add to Personal Library</string>
    <string name="romove_from_personal_library">Romove from Personal Library</string>
    <string name="chord_image">Chord image</string>
    <string name="close_chord_image" translatable="false">Close chord image</string>
    <string name="tutorial_search_hint">Search by song name</string>
    <string name="error_no_chord_selected">No chords selected</string>
    <string name="select_chord_label">Select Chord</string>
    <string name="cancel">Cancel</string>
</resources>