<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/ivChordImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/darker1_color"
        android:contentDescription="@string/fingering_img_description" />

    <ImageButton
        android:id="@+id/btnCloseChordImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end|top"
        android:layout_margin="4dp"
        android:background="@drawable/icon_cancel"
        android:contentDescription="@string/fingering_img_close" />

    <ImageButton
        android:id="@+id/btnPrevChord"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="start|bottom"
        android:layout_margin="8dp"
        android:background="@drawable/icon_arrow_left"
        android:contentDescription="@string/fingering_img_previous" />

    <ImageButton
        android:id="@+id/btnNextChord"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="2dp"
        android:background="@drawable/icon_arrow_right"
        android:contentDescription="@string/fingering_img_next" />

</FrameLayout>