<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvCreateSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/create_song_title"
            android:textColor="@color/darker2_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSongTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/song_title_label"
            android:textColor="@color/darker3_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateSongTitle" />

        <EditText
            android:id="@+id/etSongTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/song_title_hint"
            android:inputType="textCapWords"
            android:textColor="@color/darkest_color"
            android:textColorHint="@color/darker3_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSongTitleLabel" />

        <TextView
            android:id="@+id/tvSongGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/song_genre_label"
            android:textColor="@color/darker3_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSongTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSongGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSongGenreLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actvSongGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/song_genre_hint"
                android:inputType="none"
                android:textColor="@color/darkest_color"
                android:textColorHint="@color/darker3_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/release_date_label"
            android:textColor="@color/darker3_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSongGenre" />

        <EditText
            android:id="@+id/etReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/release_date_hint"
            android:inputType="date"
            android:textColor="@color/darkest_color"
            android:textColorHint="@color/darker3_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateLabel" />

        <!-- Selected Artists Section -->
        <TextView
            android:id="@+id/tvSelectedArtistsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/selected_artists_label"
            android:textColor="@color/darker3_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etReleaseDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedArtists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedArtistsLabel" />

        <!-- Artist Search Section -->
        <TextView
            android:id="@+id/tvAddArtistsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_artists_label"
            android:textColor="@color/darker3_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvSelectedArtists" />

        <EditText
            android:id="@+id/etArtistSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/artist_search_hint"
            android:inputType="textCapWords"
            android:textColor="@color/darkest_color"
            android:textColorHint="@color/darker3_color"
            app:layout_constraintEnd_toStartOf="@+id/btnSearchArtist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddArtistsLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearchArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/darker1_color"
            android:text="@string/search_button"
            android:textColor="@color/darkest_color"
            app:cornerRadius="15dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/etArtistSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etArtistSearch" />



        <ProgressBar
            android:id="@+id/pbArtistSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etArtistSearch" />

        <TextView
            android:id="@+id/tvNoArtistsFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_artists_found"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/darker3_color"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pbArtistSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchArtists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pbArtistSearch" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvSearchArtists" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/darker1_color"
            android:text="@string/create_button"
            android:textColor="@color/darkest_color"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pbLoading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>