<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="60dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageButton
            android:id="@+id/btnAddChord"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_edit"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_chord"/>

        <ImageButton
            android:id="@+id/btnRemoveBeat"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_cancel"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_beat"/>

    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexChords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="4dp"
        android:hint="@string/beat_text_hint"/>
</LinearLayout>